base/interconnect/mesh/route-amqps.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-interconnect-mesh-amqps
spec:
  port:
    targetPort: amqps
  tls:
    termination: passthrough
  to:
    kind: Service
    name: amq-interconnect-mesh
