base/interconnect/mesh/route-console.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-interconnect-mesh-console
spec:
  port:
    targetPort: http
  tls:
    termination: passthrough
  to:
    kind: Service
    name: amq-interconnect-mesh
