base/interconnect/mesh/route-inter-router.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-mesh-inter-router
spec:
  port:
    targetPort: 55677
  tls:
    termination: passthrough
  to:
    kind: Service
    name: amq-interconnect-mesh
